# internal/api/gen/oas_request_encoders_gen.go
@@ -1,26 +1,3 @@
 // Code generated by ogen, DO NOT EDIT.
 
 package api
-
-import (
-	"bytes"
-	"net/http"
-
-	"github.com/go-faster/jx"
-
-	ht "github.com/ogen-go/ogen/http"
-)
-
-func encodeCreateEventRequest(
-	req *EventRequest,
-	r *http.Request,
-) error {
-	const contentType = "application/json"
-	e := new(jx.Encoder)
-	{
-		req.Encode(e)
-	}
-	encoded := e.Bytes()
-	ht.SetBody(r, bytes.NewReader(encoded), contentType)
-	return nil
-}
