# internal/api/gen/oas_response_encoders_gen.go
@@ -11,39 +11,6 @@ import (
 	"go.opentelemetry.io/otel/trace"
 )
 
-func encodeCreateEventResponse(response CreateEventRes, w http.ResponseWriter, span trace.Span) error {
-	switch response := response.(type) {
-	case *EventResponse:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(200)
-		span.SetStatus(codes.Ok, http.StatusText(200))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	case *ErrorResponse:
-		w.Header().Set("Content-Type", "application/json; charset=utf-8")
-		w.WriteHeader(400)
-		span.SetStatus(codes.Error, http.StatusText(400))
-
-		e := new(jx.Encoder)
-		response.Encode(e)
-		if _, err := e.WriteTo(w); err != nil {
-			return errors.Wrap(err, "write")
-		}
-
-		return nil
-
-	default:
-		return errors.Errorf("unexpected response type: %T", response)
-	}
-}
-
 func encodeGetMetricsResponse(response GetMetricsRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *MetricsResponse:
