# internal/api/gen/oas_schemas_gen.go
@@ -34,102 +34,7 @@ func (s *ErrorResponse) SetCode(val OptInt) {
 	s.Code = val
 }
 
-func (*ErrorResponse) createEventRes() {}
-func (*ErrorResponse) getMetricsRes()  {}
-
-// Ref: #/components/schemas/EventRequest
-type EventRequest struct {
-	// Тип события.
-	EventType string `json:"eventType"`
-	// ID пользователя.
-	UserId string `json:"userId"`
-	// Время события (по умолчанию - текущее время).
-	Timestamp OptDateTime `json:"timestamp"`
-	// Дополнительные свойства события.
-	Properties OptEventRequestProperties `json:"properties"`
-}
-
-// GetEventType returns the value of EventType.
-func (s *EventRequest) GetEventType() string {
-	return s.EventType
-}
-
-// GetUserId returns the value of UserId.
-func (s *EventRequest) GetUserId() string {
-	return s.UserId
-}
-
-// GetTimestamp returns the value of Timestamp.
-func (s *EventRequest) GetTimestamp() OptDateTime {
-	return s.Timestamp
-}
-
-// GetProperties returns the value of Properties.
-func (s *EventRequest) GetProperties() OptEventRequestProperties {
-	return s.Properties
-}
-
-// SetEventType sets the value of EventType.
-func (s *EventRequest) SetEventType(val string) {
-	s.EventType = val
-}
-
-// SetUserId sets the value of UserId.
-func (s *EventRequest) SetUserId(val string) {
-	s.UserId = val
-}
-
-// SetTimestamp sets the value of Timestamp.
-func (s *EventRequest) SetTimestamp(val OptDateTime) {
-	s.Timestamp = val
-}
-
-// SetProperties sets the value of Properties.
-func (s *EventRequest) SetProperties(val OptEventRequestProperties) {
-	s.Properties = val
-}
-
-// Дополнительные свойства события.
-type EventRequestProperties map[string]string
-
-func (s *EventRequestProperties) init() EventRequestProperties {
-	m := *s
-	if m == nil {
-		m = map[string]string{}
-		*s = m
-	}
-	return m
-}
-
-// Ref: #/components/schemas/EventResponse
-type EventResponse struct {
-	// ID обработанного события.
-	ID OptString `json:"id"`
-	// Статус обработки.
-	Status OptString `json:"status"`
-}
-
-// GetID returns the value of ID.
-func (s *EventResponse) GetID() OptString {
-	return s.ID
-}
-
-// GetStatus returns the value of Status.
-func (s *EventResponse) GetStatus() OptString {
-	return s.Status
-}
-
-// SetID sets the value of ID.
-func (s *EventResponse) SetID(val OptString) {
-	s.ID = val
-}
-
-// SetStatus sets the value of Status.
-func (s *EventResponse) SetStatus(val OptString) {
-	s.Status = val
-}
-
-func (*EventResponse) createEventRes() {}
+func (*ErrorResponse) getMetricsRes() {}
 
 // Ref: #/components/schemas/MetricsResponse
 type MetricsResponse struct {
@@ -249,52 +154,6 @@ func (o OptDateTime) Get() (v time.Time, ok bool) {
 
 // Or returns value if set, or given parameter if does not.
 func (o OptDateTime) Or(d time.Time) time.Time {
-	if v, ok := o.Get(); ok {
-		return v
-	}
-	return d
-}
-
-// NewOptEventRequestProperties returns new OptEventRequestProperties with value set to v.
-func NewOptEventRequestProperties(v EventRequestProperties) OptEventRequestProperties {
-	return OptEventRequestProperties{
-		Value: v,
-		Set:   true,
-	}
-}
-
-// OptEventRequestProperties is optional EventRequestProperties.
-type OptEventRequestProperties struct {
-	Value EventRequestProperties
-	Set   bool
-}
-
-// IsSet returns true if OptEventRequestProperties was set.
-func (o OptEventRequestProperties) IsSet() bool { return o.Set }
-
-// Reset unsets value.
-func (o *OptEventRequestProperties) Reset() {
-	var v EventRequestProperties
-	o.Value = v
-	o.Set = false
-}
-
-// SetTo sets value to v.
-func (o *OptEventRequestProperties) SetTo(v EventRequestProperties) {
-	o.Set = true
-	o.Value = v
-}
-
-// Get returns value and boolean that denotes whether value was set.
-func (o OptEventRequestProperties) Get() (v EventRequestProperties, ok bool) {
-	if !o.Set {
-		return v, false
-	}
-	return o.Value, true
-}
-
-// Or returns value if set, or given parameter if does not.
-func (o OptEventRequestProperties) Or(d EventRequestProperties) EventRequestProperties {
 	if v, ok := o.Get(); ok {
 		return v
 	}
